# kafka-with-python-eg

./: .gitignore  README.md  pyproject.toml  pytest.ini
examples/: _argparsers.py  _plotters.py  serde_speed.py
examples/models/: as_attrs.py  as_dataclass.py  as_pydantic.py  as_vanilla_python.py
examples/schemas/: user-registered.avsc
